--- a/forallx-adl-tfl.tex
+++ b/forallx-adl-tfl.tex
@@ -64,7 +64,7 @@ Since arguments are made of sentences, the logical structure of an argument will
 
 Let's look at a more complicated example. Consider \begin{earg}
 	\item[\ex{alice}] Alice will ace the test, or Bob will.
-\end{earg} First we note that this sentence is elliptical, the verb phrase `ace the test' being omitted after `Bob will' as it is understood to be supplied by the first clause of the sentence.\footnote{A closely related example is discussed by Paul Elbourne, \emph{Meaning}, Oxford University Press, 2011, pp. 74–6. He argues that this kind of ellision is crucial evidence for phrase structure grammars, for only phrases can be omitted in this way: witness the ungrammatical `Alice will ace the test and Bob will the', where arbitrary words are omitted that do not form a grammatical phrase. This is evidence that English syntax is sensitive to the phrasal structure of sentences, and does not treat them as merely a string of words.} The full tree, with the elided phrase supplied (marked by having the VP label in a box at the lower right), is depicted in Figure \ref{fig:alice}. In this example, the whole sentence is a compound of two clauses which are sentences in their own right, or \define{subsentences}, connected by `or'.
+\end{earg} First we note that this sentence is elliptical, the verb phrase `ace the test' being omitted after `Bob will' as it is understood to be supplied by the first clause of the sentence.\footnote{A closely related example is discussed by Paul Elbourne, \emph{Meaning}, Oxford University Press, 2011, pp. 74–6. He argues that this kind of elision is crucial evidence for phrase structure grammars, for only phrases can be omitted in this way: witness the ungrammatical `Alice will ace the test and Bob will the', where arbitrary words are omitted that do not form a grammatical phrase. This is evidence that English syntax is sensitive to the phrasal structure of sentences, and does not treat them as merely a string of words.} The full tree, with the elided phrase supplied (marked by having the VP label in a box at the lower right), is depicted in Figure \ref{fig:alice}. In this example, the whole sentence is a compound of two clauses which are sentences in their own right, or \define{subsentences}, connected by `or'.
 \begin{figure}
 \begin{tikzpicture}[sibling distance=13pt]
  	\Tree [.S [.S [.NP Alice ] [.VP will [.VP ace [.DP the test ] ] ] ] [ [.Coord or ] [.S [.NP Bob ] [.VP will [.\node[draw]{VP}; \edge[roof]; {ace the test}  ] ] ] ] ]
@@ -173,7 +173,7 @@ We will start now by putting those tantalising observations about richer logics 
 \section{Atomic sentences}
 In §\ref{s:ValidityInVirtueOfForm}, we started isolating the form of an argument by replacing quasi-canonical clauses (those including none of our list of structural words) within the argument with individual placeholder letters. Thus in the first example of this section, `it is raining outside' is a quasi-canonical clause of `If it is raining outside, then Jenny is miserable', and we replaced this clause with `A'. 
 
-Our artificial language, \TFL, pursues this idea absolutely ruthlessly. We start with some \define{atomic sentences}, which are analogs of the canonical clauses of natural languages.  These will be the basic building blocks out of which more complex sentences are built. Unlike natural languages, these simplest sentences of \TFL\ have no interesting internal structure at all. The atomic sentences of \TFL\ will consist of upper case italic letters, with or without numerical subscripts. There are only twenty-six letters of the alphabet, but there is no limit to the number of atomic sentences that we might want to consider, so we add numerical subscripts to each letter to extend our library of atomic sentences indefinitely. This procedure does give us atomic sentences with some syntax, but it is irrelevant to meaning: there is no connection between `$A_{8}$' and `$A_{67}$' just because they both involve `$A$'. Likewise, there is no connection between `$D_{17}$' and `$G_{17}$' even though they share the same numerical subscript. Upper case italic letters, with or without subscripts, are all the atomic sentences there are. So, here are five different atomic sentences of \TFL:
+Our artificial language, \TFL, pursues this idea absolutely ruthlessly. We start with some \define{atomic sentences}, which are analogues of the canonical clauses of natural languages.  These will be the basic building blocks out of which more complex sentences are built. Unlike natural languages, these simplest sentences of \TFL\ have no interesting internal structure at all. The atomic sentences of \TFL\ will consist of upper case italic letters, with or without numerical subscripts. There are only twenty-six letters of the alphabet, but there is no limit to the number of atomic sentences that we might want to consider, so we add numerical subscripts to each letter to extend our library of atomic sentences indefinitely. This procedure does give us atomic sentences with some syntax, but it is irrelevant to meaning: there is no connection between `$A_{8}$' and `$A_{67}$' just because they both involve `$A$'. Likewise, there is no connection between `$D_{17}$' and `$G_{17}$' even though they share the same numerical subscript. Upper case italic letters, with or without subscripts, are all the atomic sentences there are. So, here are five different atomic sentences of \TFL:
 	$$A, P, P_{1}, P_{2}, A_{234}.$$ 
 
 Atomic sentences are the basic building blocks of \TFL. But what motivates their introduction is the fact that they can be used to represent, or \emph{symbolise}, certain English sentences. To do this, we provide a \define{symbolisation key}, such as the following, which assigns a temporary linkage between some atomic sentences of \TFL, and some quasi-canonical sentences of the natural language we are representing using \TFL, in this case, English:
@@ -240,7 +240,7 @@ As the table suggests, we will introduce these connectives by the English connec
 \section{Modelling and Paraphrase} % (fold)
 \label{sec:modelling_and_paraphrase}
 
-We saw in §\ref{ss.idargstr} the grammatical heterogenity of the sentence connectives. Even within the same class of connective we don't have grammatical uniformity. The different sentence connectives that express negation – e.g., `not', `-n't', and `it is not the case that' – can occur in quite different places in a grammatical sentence. Consider these examples:
+We saw in §\ref{ss.idargstr} the grammatical heterogeneity of the sentence connectives. Even within the same class of connective we don't have grammatical uniformity. The different sentence connectives that express negation – e.g., `not', `-n't', and `it is not the case that' – can occur in quite different places in a grammatical sentence. Consider these examples:
  \begin{earg}
 	\item Vassiliki doesn’t like ballet;
 	\item Vassiliki dislikes ballet;
@@ -756,7 +756,7 @@ Consider these two sentences:
 		\item Malcolm Turnbull is the Prime Minister.
 		\item The expression `Malcolm Turnbull' is composed of two upper case letters and thirteen lower case letters.
 	\end{itemize}
-When we want to talk about the Prime Minister, we \define{use} his name. When we want to talk about the Prime Minister's name, we \define{mention} that name. And in English, we normally do so by putting it in quotation marks.
+When we want to talk about this ex-Prime Minister, we \define{use} his name. When we want to talk about his name, we \define{mention} that name. And in English, we normally do so by putting it in quotation marks.
 
 There is a general point here. When we want to talk about things in the world, we just \emph{use} words. When we want to talk about words, we typically have to \emph{mention} those words.\footnote{More generally, when we want to talk about something we use its name. So when we want to talk about an expression, we use the name of the expression – which is just the expression enclosed in quotation marks. Mentioning an expression is using a name of that expression.} We need to indicate that we are mentioning them, rather than using them. To do this, some convention is needed. We can surround the expression in matched left and right quotation marks, or display them centrally in the page (say). So this sentence:
 	\begin{itemize}
@@ -873,7 +873,7 @@ Having been precise about use and mention, you can now relax! If you've understo
 \keyideas{
 	\item It is crucial to distinguish between use and mention – between talking about the world, and talking about  expressions.
 	\item We use \TFL\ to represent sentences and arguments. But we use English – augmented with some additional vocabulary – to talk about \TFL.
-	\item We introduced a slightly unusual convention for understanding quoted expressions involving script font letters: `($\meta{A} \eif \meta{B}$)', to take a representative example, is to be interpeted as the \TFL\ expression consisting of a left parenthesis, followed by whatever \TFL\ expression \meta{A} represents, followed by `$\eif$', followed by whatever \TFL\ expression \meta{B} represents, followed by a closing right parenthesis.
+	\item We introduced a slightly unusual convention for understanding quoted expressions involving script font letters: `($\meta{A} \eif \meta{B}$)', to take a representative example, is to be interpreted as the \TFL\ expression consisting of a left parenthesis, followed by whatever \TFL\ expression \meta{A} represents, followed by `$\eif$', followed by whatever \TFL\ expression \meta{B} represents, followed by a closing right parenthesis.
 }
 
 
