--- a/forallx-adl-truthtables.tex
+++ b/forallx-adl-truthtables.tex
@@ -9,7 +9,7 @@
 
 \section{Functions}\label{ss.function}
 
-So much for the grammar or syntax of \TFL. We turn now to the meaning of \TFL\ sentences. For technical reasons, it is best to  start with the intended intepretation of the connectives. 
+So much for the grammar or syntax of \TFL. We turn now to the meaning of \TFL\ sentences. For technical reasons, it is best to  start with the intended interpretation of the connectives. 
 
 As a preliminary, we need to have the concept of a (mathematical) \emph{function}. Frequently, we refer to things not by name, but by the relations they have to other things. You can refer to Barack Obama by name, but one could equally refer to him in relation to his role, as `the 44th President of the United States', or in relation to his family, as `the husband of Michelle and father of Malia and Sasha'. These kinds of referring expressions are known as \emph{descriptions}, and we will look at them in more detail in §\ref{subsec.defdesc}. Our interest in them now is in the relations they involve. Barack Obama is denoted by `the biological father of Malia Obama' or `the biological father of Sasha Obama', in relation to his children. But we can consider `the biological father of …' in relation to other individuals: so `the biological father of Ivanka Trump' denotes Donald, `the biological father of Daisy Turnbull' denotes Malcolm, and so on. We can summarise this information in a table like this: 
 \begin{center}
@@ -24,7 +24,7 @@ Daisy Turnbull & Malcolm\\
 \end{tabular}
 \end{center} In this table we have an \emph{input}, on the left, which is related to the \emph{output} on the right. The relation which maps the things in the left column to their corresponding outputs on the right is known as a function – in this case, the `biological father of' function. More precisely, a \define{function} is a relation between the members of some collection $A$ and some collection $B$ (which may be the same as $A$), such that each input to the function is a member of $A$, each output of the function is a member of $B$, and, crucially, each member of $A$ is associated with at most one member of $B$. So `the biological father of … ' is a function from the set of people (living or dead) to itself, and associates each person with their biological father. We implicitly that `biological father' permits each person to be associated with a unique father. If we consider other notions of fatherhood, such as \emph{paternal figure}, those would not yield a function, because many people have two or more paternal figures in their lives. Note that while everyone is associated with a unique biological father by this function (no input is associated with more than one output), the converse does not hold: some outputs are linked to more than one input, in fact, every father with more than one child.
 
-Common examples of functions occur in mathematics: we can consider the function `the sum of $x$ and $y$', which takes two numbers as input, and spits out their unique sum, $x+y$. This is again a function from a set to itself, this time the set of integers. There are functions which are from one set to another: consider, `the number of …'s children', which is a function from people to numbers, mapping each person to the number of children they have. (Even if they have more than one child, there is still a unique number characterising how many they have, and that is what this function spits out.) There are functions which do not associate an output with every input: consider `the eldest child of', which associates each parent with their first-born child, but doesn't associate non-parents with anything. There are many relations which are not functions. While Barack Obama can be chatacrerised as `the father of Malia', Malia Obama cannot be characterised as `the child of Barack', since that attempted description would apply equally to her sister.  
+Common examples of functions occur in mathematics: we can consider the function `the sum of $x$ and $y$', which takes two numbers as input, and spits out their unique sum, $x+y$. This is again a function from a set to itself, this time the set of integers. There are functions which are from one set to another: consider, `the number of …'s children', which is a function from people to numbers, mapping each person to the number of children they have. (Even if they have more than one child, there is still a unique number characterising how many they have, and that is what this function spits out.) There are functions which do not associate an output with every input: consider `the eldest child of', which associates each parent with their first-born child, but doesn't associate non-parents with anything. There are many relations which are not functions. While Barack Obama can be characterised as `the father of Malia', Malia Obama cannot be characterised as `the child of Barack', since that attempted description would apply equally to her sister.  
 
 \section{The idea of truth-functionality}
 
@@ -100,7 +100,7 @@ F & F & T\\\bottomrule
 \end{center}
 The conditional is \emph{not} commutative. You cannot swap the antecedent and consequent in general without changing the truth value, because $\meta{A}\eif\meta{B}$ has a different truth table from $\meta{B}\eif\meta{A}$. Compare: \begin{earg}
 	\item If a coin lands heads 1000 times, something surprising has happened. (True – that is very surprising.)
-	\item If something surprisings has happened, then a coin lands heads 1000 times. (False – there are other surprising things than that.)
+	\item If something surprising has happened, then a coin lands heads 1000 times. (False – there are other surprising things than that.)
 \end{earg}
 
 \paragraph{Biconditional} Since a biconditional is to be the same as the conjunction of a conditional running in each direction, we shall want the truth table for the biconditional to be:
@@ -223,9 +223,9 @@ The point to take away from this is that subjunctive conditionals cannot be tack
 
 So the `$\eif$' connective of \TFL\ is at best able to model the indicative conditional of English, as in \ref{indcond}. In fact there remain difficulties even with indicatives in \TFL. One family of difficulties arises from consideration of the or-to-if argument. The argument seems compelling in cases like this:
 \begin{earg}
-	\item Either the butler or the gardener did it;
+	\item[\ex{e:butler}] Either the butler or the gardener did it;
 	\item[So:] If it wasn't the butler, it was the gardener.
-\end{earg} But what if our confidence in the premise derives from our confidence in just one disjunct? Suppose that we are certain it was the butler, and certain that the gardener has an airtight alibi and wasn't anywhere near the manor at the time of the murder? Because we are certain it was the butler, we might be equally certain that it was either the butler or the gardener (this inference from a disjunct to a disjunction seems odd, but it is surely valid). But we might be sure that if it wasn't the butler, it was the valet – he was the only other person with motive. In this sort of case, we might have confidence in the premise of the or-to-if argument and reject its conclusion. Yet the \TFL\ analogue of the or-to-if argument is valid: as we'll see after we introduce the concept of validity for \TFL\ in §\ref{c:entvalid}), `$A \eor B \ttherefore \enot A \eif B$' turns out to be valid. This mismatch suggests that `if' and `$\eif$' aren't a perfect match. I shall say a little more about other difficulties for the material conditional analysis of indicatives in §\ref{s:ParadoxesOfMaterialConditional} and in §\ref{cond.proof}.
+\end{earg} But what if our confidence in the premise \ref{e:butler} derives from our confidence in just one disjunct? Suppose that we are certain it was the butler, and certain that the gardener has an airtight alibi and wasn't anywhere near the manor at the time of the murder? Because we are certain it was the butler, we might be equally certain of \ref{e:butler}, that it was either the butler or the gardener (this inference from a disjunct to a disjunction seems odd, but it is surely valid). But we might also be sure that if it wasn't the butler, it was the valet – he was the only other person with motive. In this sort of case, we might have confidence in the premise \ref{e:butler} of this or-to-if argument and reject its conclusion. Yet the \TFL\ analogue of the or-to-if argument is valid: as we'll see after we introduce the concept of validity for \TFL\ in §\ref{c:entvalid}), `$A \eor B \ttherefore \enot A \eif B$' turns out to be valid. This mismatch suggests that `if' and `$\eif$' aren't a perfect match. I shall say a little more about other difficulties for the material conditional analysis of indicatives in §\ref{s:ParadoxesOfMaterialConditional} and in §\ref{cond.proof}.
 
 For now, I shall content myself with the observation that `$\eif$' is the only plausible candidate for a truth-functional conditional. Our working hypothesis is that many uses of ‘if’ can be \emph{adequately approximated} by ‘$\eif$’. Many English conditionals cannot be represented adequately using `$\eif$'. \TFL\ is an intrinsically limited language. But this is only a problem if you try to use it to do things it wasn't designed to do. 
 
@@ -709,7 +709,7 @@ In different ways, these three examples highlight some of the limits of working 
 \keyideas{
 	\item If every valuation which makes some sentences all true is also one that makes some further sentence true, then those sentences entail the further sentence. We use the symbol `$\entails$' for entailment.
 	\item We can test for entailment using truth tables, in the same sort of way that we test for consistency.
-	\item If an argument when symbolised turns out to be an entailment, then the original argument is valid in virture of its truth-functional structure. So we can test for validity using the truth table tests for entailment.
+	\item If an argument when symbolised turns out to be an entailment, then the original argument is valid in virtue of its truth-functional structure. So we can test for validity using the truth table tests for entailment.
 	\item These tests nevertheless have limitations: not every valid argument can be symbolised as a \TFL\ entailment. These limitations are typical of using simpler models to represent complex things. 
 }
 
