--- a/forallx-adl-what.tex
+++ b/forallx-adl-what.tex
@@ -24,7 +24,7 @@ Offering an \define{argument}, in the sense relevant to logic (and other discipl
 	\end{earg}
 We here have a series of sentences. The word `So' on the third line indicates that the final sentence expresses the \define{conclusion} of the argument. The two sentences before that express \define{premises} of the argument. If the argument is well-constructed, the premises provide reasons in favour of the conclusion. In this example, the premises do seem to support the conclusion. At least they do, given the tacit assumption that you do not wish to get soaked. 
 
-So this is the sort of thing that logicians are interested in when they look at arguments. We shall say that an argument is any collection of premises, together with a conclusion.\footnote{Because arguments are made of sentences, logicians are very concerned with the details of particular words and phrases appearing in sentences. Logic thus also has close connections with linguistics, particularly that subdisipline of linguistics known as \define{semantics}, the theory of meaning.}
+So this is the sort of thing that logicians are interested in when they look at arguments. We shall say that an argument is any collection of premises, together with a conclusion.\footnote{Because arguments are made of sentences, logicians are very concerned with the details of particular words and phrases appearing in sentences. Logic thus also has close connections with linguistics, particularly that sub-discipline of linguistics known as \define{semantics}, the theory of meaning.}
 
 In the example just given, we used individual sentences to express both of the argument's premises, and we used a third sentence to express the argument's conclusion. Many arguments are expressed in this way. But a single sentence can contain a complete argument. Consider:
 	\begin{quote}
@@ -174,7 +174,7 @@ Some cases are less straightforward. Consider this argument: \begin{earg}
 	\item[] Eating meat causes avoidable suffering.
 	\item[So:] Eating meat is immoral.
 \end{earg}
-Many people will find the premises plausible, and the conclusion therefore compelling. This is part of the case for vegatarianism. But not everyone finds the conclusion acceptable; such people end up finding one or both of the premises should be rejected. Interestingly, people may find themselves still finding the premises attractive even when they recognise a conclusion follows that they cannot accept. Here they may find that there is some reason to accept the premises (perhaps they seem true at first glance), and some reason to reject them (they have, at second glance, consequences the person cannot accept). I don't want to adjudicate the merits of this argument here. I only want to emphasise that even offering a conclusive argument to someone, with premises that they currently accept, is not enough to make them come to believe the conclusion.
+Many people will find the premises plausible, and the conclusion therefore compelling. This is part of the case for vegetarianism. But not everyone finds the conclusion acceptable; such people end up finding one or both of the premises should be rejected. Interestingly, people may find themselves still finding the premises attractive even when they recognise a conclusion follows that they cannot accept. Here they may find that there is some reason to accept the premises (perhaps they seem true at first glance), and some reason to reject them (they have, at second glance, consequences the person cannot accept). I don't want to adjudicate the merits of this argument here. I only want to emphasise that even offering a conclusive argument to someone, with premises that they currently accept, is not enough to make them come to believe the conclusion.
 
 Sometimes people think that logic will provide a powerful tool to persuade and convince others of their point of view. They sometimes want to study logic as if it is some dark art enabling them to subdue beliefs that contradict their own. This is not really a very nice thing to want to do – to force a belief on someone, whether they want to believe it or not – and so it is not particularly regrettable that logic doesn't help you to do it. Logic can show which claims follow from which others, and which contradict one another. It can help us elaborate the content of some claim, or delineate the commitments a certain belief would incur. But logic does not tell you what to believe, even when you have a conclusive argument.
 
@@ -212,7 +212,7 @@ Again, because nothing can be both green all over and red all over, the truth of
 	\end{earg}
 The argument is inconclusive, since it is possible to be green all over and shiny all over. (I might paint my nails with an elegant shiny green varnish.) Plausibly, the conclusiveness of this argument is keyed to the way that colours (or colour-words) interact. But, whether or not that is right, it is not simply the form of the argument that makes it conclusive. 
 
- An argument can be conclusive due to its structure, and also be conclusive for other reasons. Arguably, this might be going on in the argument discussed at the end of §\ref{s:conclusiveargs}, with the premise `Oranges are not fruits'. Some people might think this premise has to be false, because of what oranges are. (Many will say that \emph{being a fruit} is an essential part of what it is to be an orange.) But if the premise `Oranges are not fruits' has to be false, it is not possible for the premises to be true. So it is not possible for premises to be true \emph{while} the conclusion is false. Hence the argument is conclusive – both because it has a good structure, but also because it has a premsie that cannot be true.\footnote{When an argument has an impossible premise, any argument with that premise will be conclusive \emph{no matter what} the conclusion is! So this is a weird kind of case of conclusiveness. But nothing much really turns on it, and it is simpler to simply count it as conclusive than to try and separate out such `degenerate' cases of conclusive arguments. See also §\ref{s:neccandcont}.}
+ An argument can be conclusive due to its structure, and also be conclusive for other reasons. Arguably, this might be going on in the argument discussed at the end of §\ref{s:conclusiveargs}, with the premise `Oranges are not fruits'. Some people might think this premise has to be false, because of what oranges are. (Many will say that \emph{being a fruit} is an essential part of what it is to be an orange.) But if the premise `Oranges are not fruits' has to be false, it is not possible for the premises to be true. So it is not possible for premises to be true \emph{while} the conclusion is false. Hence the argument is conclusive – both because it has a good structure, but also because it has a premise that cannot be true.\footnote{When an argument has an impossible premise, any argument with that premise will be conclusive \emph{no matter what} the conclusion is! So this is a weird kind of case of conclusiveness. But nothing much really turns on it, and it is simpler to simply count it as conclusive than to try and separate out such `degenerate' cases of conclusive arguments. See also §\ref{s:neccandcont}.}
 
 
 \section{Validity}\label{s:validityintro}
@@ -316,7 +316,7 @@ Some arguments which are conclusive but invalid can be turned into valid argumen
 
 	Any conclusive argument you are likely to come across will either already be valid, or can be transformed into a valid argument by making some assumption on which it implicitly relies into an explicit premise.
 
-	Not every inconclusive argument should be treated as an enthymeme. In particular, many strong inductive arguments can be made weaker when they are treated as enythymematic. Consider:
+	Not every inconclusive argument should be treated as an enthymeme. In particular, many strong inductive arguments can be made weaker when they are treated as enthymematic. Consider:
 	\begin{earg}
 		\item[] In January 2015, it was hot in Adelaide.
 		\item[] In January 2020, it was hot in Adelaide.
@@ -385,7 +385,7 @@ Which of the following are valid arguments? \begin{enumerate}
 	\end{earg}
 \item \begin{earg}
 	\item[] Anyone can pass logic if they work diligently.
-\item[] Sarah is diligent and hardworking.
+\item[] Sarah is diligent and hard working.
 \item[So:] Sarah can pass logic.
 \end{earg}
 \item \begin{earg}
@@ -457,17 +457,17 @@ Logic alone cannot tell us which, if either, of these sentences is true. Yet we 
 	}
 Conversely, \ref{B1} and \ref{B2} are \define{jointly inconsistent}.
 
-Consistency is relatively trivial in some cases. If we take at random some unrelated sentences, they will typically beconsistent. For example, ‘Eggs are delicious’, ‘Frogs hop’, and ‘Barry hosts a podcast’ have nothing much to do with one another. It is unsurprising to find out that they can all be true together, because how could unrelated sentences place any constraints on the possibility of their simultaneous truth? But consistency can be surprising, when related sentences can be true together even though it may at first glance seem impossible. One of Einstein's great contributions was the discovery  that these claims are consistent: ‘Albert correctly measured the spaceship to be 50m’, and ‘Brunhilde correctly measured the spaceship to be 45m’, so long as Albert and Brunhilde are in relative motion.
+Consistency is relatively trivial in some cases. If we take at random some unrelated sentences, they will typically be consistent. For example, ‘Eggs are delicious’, ‘Frogs hop’, and ‘Barry hosts a podcast’ have nothing much to do with one another. It is unsurprising to find out that they can all be true together, because how could unrelated sentences place any constraints on the possibility of their simultaneous truth? But consistency can be surprising, when related sentences can be true together even though it may at first glance seem impossible. One of Einstein's great contributions was the discovery  that these claims are consistent: ‘Albert correctly measured the spaceship to be 50m’, and ‘Brunhilde correctly measured the spaceship to be 45m’, so long as Albert and Brunhilde are in relative motion.
 
 We can ask about the consistency of any number of sentences. For example, consider the following four sentences:
 	\label{MartianGiraffes}
 	\begin{earg}
 		\item[\ex{G1}] There are at least four giraffes at the wild animal park.
 		\item[\ex{G2}] There are exactly seven gorillas at the wild animal park.
-		\item[\ex{G3}] There are not more than two martians at the wild animal park.
-		\item[\ex{G4}] Every giraffe at the wild animal park is a martian.
+		\item[\ex{G3}] There are not more than two Martians at the wild animal park.
+		\item[\ex{G4}] Every giraffe at the wild animal park is a Martian.
 	\end{earg}
-\ref{G1} and \ref{G4} together entail that there are at least four martian giraffes at the park. This conflicts with \ref{G3}, which implies that there are no more than two martian giraffes there. So the sentences \ref{G1}–\ref{G4} are jointly inconsistent. They cannot all be true together. (Note that the sentences \ref{G1}, \ref{G3} and \ref{G4} are jointly inconsistent. But if some sentences are already jointly inconsistent, adding an extra sentence to the mix will not make them consistent!)
+\ref{G1} and \ref{G4} together entail that there are at least four Martian giraffes at the park. This conflicts with \ref{G3}, which implies that there are no more than two Martian giraffes there. So the sentences \ref{G1}–\ref{G4} are jointly inconsistent. They cannot all be true together. (Note that the sentences \ref{G1}, \ref{G3} and \ref{G4} are jointly inconsistent. But if some sentences are already jointly inconsistent, adding an extra sentence to the mix will not make them consistent!)
 
 There is an interesting connection between consistency and conclusive arguments. A conclusive argument is one where the premises guarantee the truth of the conclusion. So it is an argument where if the premises are true, the conclusion must be true. So the premises cannot be jointly consistent with the claim that the conclusion is false. Since the argument `Dogs and cats are animals, so dogs are animals' is conclusive, that shows that the sentences `Dogs and cats are animals' and `Dogs are \textbf{not} animals' are jointly inconsistent. If an argument is conclusive, the premises of the argument taken together with the denial of the conclusion will be jointly inconsistent.
 \factoidbox{Sentences \meta{A} and \meta{B} are jointly inconsistent iff the arguments‘ \meta{A}  \ttherefore\ not‐\meta{B}’ and ‘\meta{B}  \ttherefore\ not‐\meta{A}’ are both conclusive. This can be generalised to arbitrary inconsistent collections of sentences.}
@@ -497,7 +497,7 @@ In assessing whether an argument is conclusive, we care about what would be true
 	\end{earg}
 In order to know if sentence \ref{Acontingent} is true, you would need to look outside or check the weather channel. It might be true; it might be false.
 
-Sentence \ref{Anecessity} is different. You do not need to look outside to know that it says something true. Regardless of what the weather is like, if it is raining, water is precipitating – that is just what rain \emph{is}, metereologically speaking. That is a \define{necessary truth}. Here, a necessary connection in meaning between `rain' and `precipitation' makes what the sentence says true in every circumstance.
+Sentence \ref{Anecessity} is different. You do not need to look outside to know that it says something true. Regardless of what the weather is like, if it is raining, water is precipitating – that is just what rain \emph{is}, meteorologically speaking. That is a \define{necessary truth}. Here, a necessary connection in meaning between `rain' and `precipitation' makes what the sentence says true in every circumstance.
 
 Sentence \ref{imposs} is a \define{necessary falsehood} or \define{impossibility}. Nothing is, or even could be, both green and colourless. We don't need to do any scientific or other investigation to know that \ref{imposs} is not and cannot be true.
 
@@ -558,7 +558,7 @@ For each of the following: Is it necessarily true, necessarily false, or conting
 
 \problempart
 \label{pr.MartianGiraffes}
-Look back at the sentences \ref{G1}–\ref{G4} in this section (about giraffes, gorillas and martians in the wild animal park), and consider each of the following:
+Look back at the sentences \ref{G1}–\ref{G4} in this section (about giraffes, gorillas and Martians in the wild animal park), and consider each of the following:
 \begin{earg}
 \item \ref{G2}, \ref{G3}, and \ref{G4}
 \item \ref{G1}, \ref{G3}, and \ref{G4}
